fixed: design - container overflowing and logic - displaying latest comments using reversed in data

--- a/src/components/admin/latestComments/Comments.module.scss
+++ b/src/components/admin/latestComments/Comments.module.scss
@@ -4,7 +4,6 @@
     border-radius: 4px;
     height: 504px;
     overflow-y: scroll;
-    overflow-x: hidden;
 
 
     .comHead {
@@ -19,7 +18,6 @@
     .comment {
         margin-bottom: 24px;
         border-bottom: 1px solid #323437;
-        width: 492px;
 
 
         .commentOwner {
@@ -86,12 +84,9 @@
             font-size: 14px;
             line-height: 19px;
             margin-bottom: 24px;
-            max-width: 455px;
 
             word-wrap: break-word;
-            /* Break long words */
             overflow-wrap: break-word;
-            /* Handle overflow */
             white-space: normal;
         }
     }
